src/harf-src/src/stylesheets/abilities-section.scss
@font-face{
  font-family: iran-yekan;
  src: url(../assets/fonts/IRANYekan.ttf);
}

#abilities-title{
  color: #26FF7B;
  font-style: normal;
  font-weight: bold;
  font-size: 1.8vw;
  display: flex;
  justify-content: center;
  align-items: center;
  font-family: iran-yekan, serif;
}

#abilities-title-space{
  height: 3vw;
}

#abilities{
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

#side{
  margin-top: 50vh;
  position: absolute;
  height:80.55555555555556vh;
  width:99.5vw;
  display: flex;
  justify-content: end;
  flex-direction: row;
  align-items: end;
}

#side-main{
  height:85vh;
  width:18vw;
}

.ability-group{
  display: flex;
  justify-content: center;
  align-items: end;
  flex-direction: column;
  height:33vh;
  width:20vw;
}

.black-text{
  direction: rtl;
  white-space: nowrap;
  background-color: #26FF7B;
  color: transparent;
  transition: box-shadow 1s linear;
  left: 0;
  font-family: iran-yekan, serif;
  font-weight: bold;
  z-index: 3;
  width: fit-content;
  overflow: hidden;
  box-shadow: inset 0 0 0 0 #26FF7B;
  font-size: 1.1vw;
  position: relative;
  background-clip: text;
}

.black-text::before {
  direction: rtl;
  white-space: nowrap;
  font-family: iran-yekan, serif;
  font-weight: bold;
  font-size: 1.1vw;
  content: attr(data-title);
  background: black;
  position: absolute;
  width: 0;
  top: 0;
  bottom: 0;
  color: transparent;
  background-clip: text;
  left: 0;
  right: 0;
  transition: width 1.5s linear;
}

.in-view::before {
  width: 100%;
}

.black-text-background{
  direction: rtl;
  color: transparent;
  transition: 1s linear;
  background-color: black;
  transform-origin: right;
  z-index: 1;
  position: absolute;
  top: 0;
  font-family: iran-yekan, serif;
  font-style: normal;
  font-weight: bold;
  font-size: 1.1vw;
}


.black-text-background::before{
  direction: rtl;
  white-space: nowrap;
  content: attr(data-title);
  color: transparent;
  transition: 1.5s linear;
  background-color: #26FF7B;
  transform-origin: right;
  position: absolute;
  top: 0;
  font-family: iran-yekan, serif;
  font-style: normal;
  font-weight: bold;
  width: 0;
  font-size: 1.1vw;
}

.in-view-bg::before {
  width: 100%;
}

.title-stack{
  display: flex;
  position: relative;
  flex-direction: column;
}

.white-text{
  color: white;
  direction: rtl;
  font-family: iran-yekan, serif;
  font-style: normal;
  font-weight: normal;
  font-size: 1vw;
  margin-top: -0.25vw;
  width: 19vw;
}

#abilities-wrapper{
  display: flex;
  justify-content: space-between;
  flex-direction: row;
  width:55vw;
}

.ability-icon{
  height:6.944444444444445vh;
  width:3.90625vw;
}

@media screen and (max-width: 500px){
  #abilities-title{
    font-size: 5.3vw;
  }

  #side{
    display: none;
    margin-top: -190vh;
    height:100vh;
    width:99.5vw;
  }

  #side-main{
    height:100vh;
    width:45vw;
  }

  #abilities-wrapper{
    justify-content: center;
    align-items: center;
    flex-direction: column;
    width:55vw;
  }

  .ability-group{
    height:31.690140845070424vh;
    width:72.22222222222221vw;
  }

  .black-text{
    font-size: 4.1vw;
  }

  .black-text-background{
      font-size: 4.1vw;
  }

  .white-text{
    font-size: 4vw;
    width: 70vw;
  }

  .ability-icon{
    height:8vh;
    width:13vw;
  }

  #abilities-title-space{
    height: 12vh;
  }

  .on-left {
    align-items: start;
    text-align: left;
  }
}

